Feature: rabbit listener configuration for batch processing events (ALFA-117)
Feature: rabbit listener configuration for batch processing events (ALFA-117)

Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/36